# GLRayTrace

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  engine.h
engine/collision/: CMakeLists.txt  Collider.cpp  Collider.h  RayCollider.cpp  RayCollider.h  SphereCollider.cpp  SphereCollider.h
engine/geometry/: CMakeLists.txt  Geometry.h  Ray.h  Rect.cpp  Rect.h  Sphere.h
engine/render/: CMakeLists.txt  Material.h
engine/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Light.h  Node.cpp  Node.h  Scene.cpp  Scene.h
engine/tools/: genheader.py
engine/util/: CMakeLists.txt  PPM.cpp  PPM.h
src/: TestScene.cpp  TestScene.h  main.cpp
